[gd_scene load_steps=14 format=3 uid="uid://78nastiglwp7"]

[ext_resource type="Script" uid="uid://ow2fiuxg28t3" path="res://Scripts/Menu.gd" id="1_kld02"]
[ext_resource type="Shader" uid="uid://b3du4l67beylj" path="res://Assets/Materials/Blur.gdshader" id="2_s2c3o"]
[ext_resource type="FontFile" uid="uid://cotghmhxxkiga" path="res://Assets/BebasNeue-Regular.ttf" id="2_syfuq"]
[ext_resource type="Shader" uid="uid://dl7l55kt8v6f" path="res://Assets/Materials/Vignette.gdshader" id="3_ma218"]
[ext_resource type="FontFile" uid="uid://nbfn5ru7msph" path="res://Assets/Screener W01 Regular.ttf" id="3_s2c3o"]
[ext_resource type="Script" uid="uid://begbqr0ipkp26" path="res://Scripts/Terminal.gd" id="6_idohh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ma218"]
shader = ExtResource("2_s2c3o")
shader_parameter/lod = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_idohh"]
shader = ExtResource("3_ma218")
shader_parameter/alpha = 0.76
shader_parameter/inner_radius = 0.0
shader_parameter/outer_radius = 1.5

[sub_resource type="LabelSettings" id="LabelSettings_ma218"]
font = ExtResource("2_syfuq")
font_size = 110

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gqyd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bq36i"]

[sub_resource type="LabelSettings" id="LabelSettings_idohh"]
font = ExtResource("3_s2c3o")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma218"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kld02")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ma218")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_idohh")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 130.0
offset_right = 722.0
offset_bottom = 329.0
text = "The Quantum Trials"
label_settings = SubResource("LabelSettings_ma218")

[node name="New Game" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 250.0
offset_right = 139.0
offset_bottom = 290.0
theme_override_colors/font_disabled_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_s2c3o")
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_7gqyd")
text = "New Game"
flat = true
alignment = 0

[node name="Resume" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 250.0
offset_right = 139.0
offset_bottom = 290.0
theme_override_colors/font_disabled_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.478431, 0.478431, 0.478431, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_s2c3o")
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_7gqyd")
text = "Resume"
flat = true
alignment = 0

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 280.0
offset_right = 107.0
offset_bottom = 320.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.101241, 0.101241, 0.101241, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.593134, 0.593134, 0.593134, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.476578, 0.476578, 0.476578, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_s2c3o")
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_bq36i")
text = "Settings"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 310.0
offset_right = 107.0
offset_bottom = 350.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_disabled_color = Color(0.101241, 0.101241, 0.101241, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.593134, 0.593134, 0.593134, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.476578, 0.476578, 0.476578, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_s2c3o")
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_bq36i")
text = "Quit"
flat = true
alignment = 0

[node name="SettingsMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 330.0
offset_top = 120.0
offset_right = 370.0
offset_bottom = 160.0

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
layout_mode = 2
offset_right = 635.0
offset_bottom = 480.0
size_flags_horizontal = 3
color = Color(0.0936694, 0.0936694, 0.0936694, 0.768627)

[node name="BoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0

[node name="Settings" type="Label" parent="SettingsMenu/BoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Label" type="Label" parent="SettingsMenu/BoxContainer"]
layout_mode = 2
text = "Whuh"

[node name="DebugBG" type="ColorRect" parent="."]
layout_mode = 2
offset_top = 652.0
offset_right = 446.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.717647)

[node name="Debug" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 652.0
offset_right = 128.0
offset_bottom = 720.0

[node name="PlayerPos" type="Label" parent="Debug"]
layout_mode = 2
text = "Player Position:"
label_settings = SubResource("LabelSettings_idohh")

[node name="PlayerVel" type="Label" parent="Debug"]
layout_mode = 2
text = "Player Velocity:"
label_settings = SubResource("LabelSettings_idohh")

[node name="CurrentMap" type="Label" parent="Debug"]
layout_mode = 2
text = "Current Map:"
label_settings = SubResource("LabelSettings_idohh")

[node name="Console" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 31.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ma218")
placeholder_text = "Type a command in here"
flat = true
script = ExtResource("6_idohh")

[connection signal="pressed" from="New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="text_submitted" from="Console" to="Console" method="_on_text_submitted"]
